test/corpus/config.txt
===
Empty config block
===

config {
}

---

(source_file
  (config_block))

===
Config with logs
===

config {
  logs = "./my-logs"
}

---

(source_file
  (config_block
    (setting
      name: (identifier)
      value: (string (string_content)))))

===
Top-level env block
===

env {
  RUST_LOG = args.log_level
}

---

(source_file
  (env_block
    (env_pair
      name: (identifier)
      value: (args_reference (identifier)))))

===
Top-level arg definition
===

arg port {
  type = string
  default = "3000"
  short = "p"
  description = "Port to listen on"
}

---

(source_file
  (arg_definition
    name: (identifier)
    (setting
      name: (identifier)
      value: (identifier))
    (setting
      name: (identifier)
      value: (string (string_content)))
    (setting
      name: (identifier)
      value: (string (string_content)))
    (setting
      name: (identifier)
      value: (string (string_content)))))

===
Top-level bool arg
===

arg enable_feature {
  type = bool
  default = false
}

---

(source_file
  (arg_definition
    name: (identifier)
    (setting
      name: (identifier)
      value: (identifier))
    (setting
      name: (identifier)
      value: (boolean))))
